:lipstick: Entity > Charts > KPI > Refactor & Fix alignments

--- a/src/components/ChartKPI/style.scoped.scss
+++ b/src/components/ChartKPI/style.scoped.scss
@@ -42,17 +42,7 @@
     }
 
     .value {
-        margin-top: rem(-5px);
-
         width: 80%;
-
-        @include respond-to('medium') {
-            margin-top: rem(-10px, 'medium');
-        }
-
-        @include respond-to('large') {
-            margin-top: rem(-10px, 'large');
-        }
     }
 }
 
